; ModuleID = '/home/carl/AnghaBench/linux/drivers/mmc/host/extr_sdhci-xenon.c_xenon_enable_sdhc.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mmc/host/extr_sdhci-xenon.c_xenon_enable_sdhc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sdhci_host = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@XENON_SYS_OP_CTRL = common dso_local global i32 0, align 4
@XENON_SLOT_ENABLE_SHIFT = common dso_local global i32 0, align 4
@MMC_CAP_WAIT_WHILE_BUSY = common dso_local global i32 0, align 4
@MMC_CAP_BUS_WIDTH_TEST = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sdhci_host*, i8)* @xenon_enable_sdhc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xenon_enable_sdhc(%struct.sdhci_host* %0, i8 zeroext %1) #0 {
  %3 = alloca %struct.sdhci_host*, align 8
  %4 = alloca i8, align 1
  %5 = alloca i32, align 4
  store %struct.sdhci_host* %0, %struct.sdhci_host** %3, align 8
  store i8 %1, i8* %4, align 1
  %6 = load %struct.sdhci_host*, %struct.sdhci_host** %3, align 8
  %7 = load i32, i32* @XENON_SYS_OP_CTRL, align 4
  %8 = call i32 @sdhci_readl(%struct.sdhci_host* %6, i32 %7)
  store i32 %8, i32* %5, align 4
  %9 = load i8, i8* %4, align 1
  %10 = call i32 @BIT(i8 zeroext %9)
  %11 = load i32, i32* @XENON_SLOT_ENABLE_SHIFT, align 4
  %12 = shl i32 %10, %11
  %13 = load i32, i32* %5, align 4
  %14 = or i32 %13, %12
  store i32 %14, i32* %5, align 4
  %15 = load %struct.sdhci_host*, %struct.sdhci_host** %3, align 8
  %16 = load i32, i32* %5, align 4
  %17 = load i32, i32* @XENON_SYS_OP_CTRL, align 4
  %18 = call i32 @sdhci_writel(%struct.sdhci_host* %15, i32 %16, i32 %17)
  %19 = load i32, i32* @MMC_CAP_WAIT_WHILE_BUSY, align 4
  %20 = load %struct.sdhci_host*, %struct.sdhci_host** %3, align 8
  %21 = getelementptr inbounds %struct.sdhci_host, %struct.sdhci_host* %20, i32 0, i32 0
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = or i32 %24, %19
  store i32 %25, i32* %23, align 4
  %26 = load i32, i32* @MMC_CAP_BUS_WIDTH_TEST, align 4
  %27 = xor i32 %26, -1
  %28 = load %struct.sdhci_host*, %struct.sdhci_host** %3, align 8
  %29 = getelementptr inbounds %struct.sdhci_host, %struct.sdhci_host* %28, i32 0, i32 0
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** %29, align 8
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = and i32 %32, %27
  store i32 %33, i32* %31, align 4
  ret void
}

declare dso_local i32 @sdhci_readl(%struct.sdhci_host*, i32) #1

declare dso_local i32 @BIT(i8 zeroext) #1

declare dso_local i32 @sdhci_writel(%struct.sdhci_host*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
